--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <meta name="google-site-verification" content="yxm4bamDfA8U9v3EKssUOEknTemP8kjtt_2zi7f9Eok" />
+    <meta name="msvalidate.01" content="13E00DA97ECD5CAB67DBA892F203C401" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     
